--- a/static/index.html
+++ b/static/index.html
@@ -1,1 +1,10 @@
-<html><body><h1>Garage Sensors</h1></body></html>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Garage Sensors</title>
+</head>
+<body>
+  <h1>Добро пожаловать в систему мониторинга гаража!</h1>
+</body>
+</html>
