--- a/static/index.html
+++ b/static/index.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <title>Garage Sensors</title>
-</head>
-<body>
-  <h1>Добро пожаловать в систему мониторинга гаража!</h1>
-</body>
-</html>
+<html><body><h1>Garage Sensor Project</h1></body></html>
