--- a/static/interface_panel.html
+++ b/static/interface_panel.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -37,13 +36,37 @@
 <body>
     <div class="card">
         <h2>📡 Мониторинг</h2>
-        <div class="row"><b>🌡️ Температура:</b> <span>{{ temperature }} °C</span></div>
-        <div class="row"><b>💧 Влажность:</b> <span>{{ humidity }} %</span></div>
-        <div class="row"><b>🚪 Движение:</b> <span>{{ motion }}</span></div>
-        <div class="row"><b>🌊 Вода:</b> <span>{{ water }}</span></div>
-        <div class="row"><b>📶 RSSI:</b> <span>{{ rssi }}</span></div>
-        <div class="row"><b><span style="opacity:0">---</span> SNR:</b> <span>{{ snr }}</span></div>
-        <div class="row"><b>⏱️ Время:</b> <span>{{ time }}</span></div>
+        <div class="row"><b>🌡️ Температура:</b> <span id="temperature">–</span> °C</div>
+        <div class="row"><b>💧 Влажность:</b> <span id="humidity">–</span> %</div>
+        <div class="row"><b>🚪 Движение:</b> <span id="motion">–</span></div>
+        <div class="row"><b>🌊 Вода:</b> <span id="water">–</span></div>
+        <div class="row"><b>📶 RSSI:</b> <span id="rssi">–</span></div>
+        <div class="row"><b><span style="opacity:0">---</span> SNR:</b> <span id="snr">–</span></div>
+        <div class="row"><b>⏱️ Время:</b> <span id="time">–</span></div>
     </div>
+
+    <script>
+        async function updateData() {
+            try {
+                const response = await fetch('/api/data');
+                const data = await response.json();
+
+                document.getElementById('temperature').textContent = data.temperature ?? '–';
+                document.getElementById('humidity').textContent = data.humidity ?? '–';
+                document.getElementById('motion').textContent = data.motion ? 'Да' : 'Нет';
+                document.getElementById('water').textContent = data.water ?? '–';
+                document.getElementById('rssi').textContent = data.rssi ?? '–';
+                document.getElementById('snr').textContent = data.snr ?? '–';
+
+                const now = new Date();
+                document.getElementById('time').textContent = now.toLocaleTimeString();
+            } catch (error) {
+                console.error("Ошибка при получении данных:", error);
+            }
+        }
+
+        setInterval(updateData, 5000);
+        updateData();
+    </script>
 </body>
 </html>
